--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>    
 
         <div>
-            <div class="row">
+            <div class="row" title="Current Train Schedule">
 
                 <div class="col-sm">
                     <label>Train Name:</label>
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <form id="form1">
+        <form id="form1" tite="Add Train">
 
             <div class="form">
                 <label>Train Name:</label>
