updated all js to update correctly with the exception of local forage which still needs to be included

--- a/index.html
+++ b/index.html
@@ -23,21 +23,12 @@
                 <tr>
                     <th scoop ="col">Train Name</th>
                     <th scoop ="col">Destination</th>
-                    <th scoop ="col">Frequency (min)</th>
+                    <th scoop ="col">Frequency(min)</th>
                     <th scoop ="col">Next Arrival</th>
                     <th scoop ="col">Minutes Away</th>
                 </tr>
             </thead>
-            <tbody>
-                    <tr>
-                      <td>t name</td>
-                      <td>dest</td>
-                      <td>activity</td>
-                      <td>frequ</td>
-                      <td>next Arrival</td>
-                      <td>minutes away</td>
-                    </tr>     
-            </tbody>
+            <tbody id="thebodytag"></tbody>
         </table>
 
 
@@ -73,7 +64,6 @@
 </body>
 
 
-
-<script src="../Train-Scheduler/assets/javascript/app.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js" integrity="sha256-H9jAz//QLkDOy/nzE9G4aYijQtkLt9FvGmdUTwBk6gs=" crossorigin="anonymous"></script>
+<script src="../Train-Scheduler/assets/javascript/app.js"></script>
 </html>
