--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 </body>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.7.3/localforage.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js" integrity="sha256-H9jAz//QLkDOy/nzE9G4aYijQtkLt9FvGmdUTwBk6gs=" crossorigin="anonymous"></script>
 <script src="../Train-Scheduler/assets/javascript/app.js"></script>
 </html>
